Fixed spacing issues

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -32,6 +32,11 @@ h3{ font-size: 1.25em}
   text-align: center;
 }
 
+body{
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 /**
 JUMBOTRON
 **/
